--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.7",
+    "@types/mongoose": "^5.7.36",
     "@types/node": "^14.0.27",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongoose": "^5.9.29"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
