--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev-server": "npm run build && nodemon dist/server.js --ignore client",
     "server": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1", 
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client", 
+    "postinstall": "tsc"
   },
   "keywords": [],
   "author": "Ayodeji Tolu-ojo",
