--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev": "./node_modules/.bin/concurrently \"npm run dev-server\" \"npm run client\"",
     "dev-server": "npm run build && nodemon dist/server.js --ignore client",
     "server": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client", 
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "postinstall": "tsc"
   },
   "keywords": [],
@@ -27,7 +27,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.29",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "typescript": "^4.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
