--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "server": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-    "postinstall": "tsc"
+    "postinstall": "tsc", 
+    "start": "./node_modules/.bin/concurrently \"npm run dev-server\" \"npm run client\""
   },
   "keywords": [],
   "author": "Ayodeji Tolu-ojo",
