--- a/client/package.json
+++ b/client/package.json
@@ -35,5 +35,9 @@
       "last 1 safari version"
     ]
   }, 
-  "proxy": "http://localhost:5000/"
-}
+  "proxy": {
+    "/api/*": {
+      "target": "http://localhost:5000/",
+      "secure": false
+    }
+  }
