--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
     "postinstall": "tsc",
-    "start": "./node_modules/.bin/concurrently \"npm run dev-server\" \"npm run client\""
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "Ayodeji Tolu-ojo",
@@ -28,6 +28,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.29",
+    "nodemon": "^2.0.4",
     "path": "^0.12.7",
     "typescript": "^4.0.2"
   }
